tests/fixtures/invalid/divmod_int_list.py
# Cannot call divmod() with Int, List[int]
x = divmod(1, [1, 2, 3])
